--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ li{display:inline; float:left;}
 	height:60px;
 	width:100%;
 	/* background-color:pink; */
-	z-index:100;
+	z-index:10;
 }
 
 .mobile_container{
@@ -132,14 +132,17 @@ li{display:inline; float:left;}
 	height:60px;
 	width:100%;
 	background-color:#a8d2a0;
+	z-index:10;
 }
 
 .mobile_container a{
 	text-decoration:none;
-	color:white;
+	color:black;
 	text-transform:uppercase;
 	font-size:1em;
 }
+
+.mobile_container ul li a{color:white;}
 
 .mobile_container ul{
 	position:fixed;
@@ -162,7 +165,9 @@ li{display:inline; float:left;}
 	font-size: 18px;
 	line-height: 60px;
 	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	
 }
+
 
 .subdiv{float:none;}
 
@@ -201,13 +206,9 @@ li{display:inline; float:left;}
 }
 
 
-#home_title{
-	font-size:4em;
-}
+#home_title{font-size:4em;}
 
-#rotate div{
-	font-size:1.5em;
-}
+#rotate div{font-size:1.5em;}
 
 
 
@@ -240,7 +241,7 @@ li{display:inline; float:left;}
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	/* grid-template-rows: minmax(220px, auto); */
-	grid-template-rows:220px 220px 220px;
+	grid-template-rows:260px 260px 260px;
 	grid-gap: 20px;
 	grid-template-areas: 
 		"NWerbig 	NPres 		NPres 			NAng"
