--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,59 @@ li{display:inline; float:left;}
 /* ----- ----- ----- */
 /* ----- Footer ----- */
 
-#contact{padding-top:500px;}
+/* #contact{padding-top:500px;} */
+
+#contact1{
+	display: table;
+    width: 100%;
+	padding-top:150px;
+	margin:0 auto;
+    height:100vh;
+    /* padding: 250px 0; */
+    text-align: center;
+    color: white;
+    background: url("../media/contactback.jpg") no-repeat bottom center scroll;
+    background-color: #a8d2a0;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+
+#contact label, #contact input, #contact textarea, #contact select{
+	display: block;
+	width:60%;
+	max-width:1200px;
+	margin:0 auto;
+}
+
+#contact label{
+	margin-top:1em;
+	font-weight: bold;
+	font-size: 1em;
+	text-align:left;
+}
+ 
+
+#contact input, #contact select{
+	height: 2em;
+}
+
+#contact textarea{
+	height: 8em;
+}
+
+#contact input[type=submit]{
+	height: 2.5em;
+	margin-top: 2%;
+}
+
+
+
+
+
+
 
 
 /* ----- ----- ----- */
@@ -396,6 +448,13 @@ li{display:inline; float:left;}
 	border-top:3px solid rgba(0, 0, 0, 0.3);
 	margin-top:2%;
 	
+}
+
+#footer.contact{
+	position:absolute;
+	bottom:0px;
+	left:377px;
+	border-top:3px solid rgba(255, 255, 255, 0.3);
 }
 
 #footer_insta{height:1em;}
