--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -49,11 +49,6 @@
 
 @media all and (max-width : 1000px) {
 	.brand-content-grid{
-		width: 100%;
-		max-width: 1200px;
-		margin:auto;
-
-		display:grid;
 		grid-template-columns: 1fr;
 		grid-gap: 40px;
 	}
@@ -133,6 +128,44 @@
 
 }
 
+
+@media all and (max-width : 560px) {
+	#home_title{font-size:2.5em;}
+	.footer{padding:4% 3% 4% 3%;}
+}
+
+@media all and (max-width : 495px) {
+	.brand-content-grid{
+		grid-gap: 20px;
+	}
+
+	.brand-content-grid img{
+		max-width: 350px;
+		margin:0 auto;
+	}
+
+	.brand-content-grid p{
+		margin-top: 0em;
+		padding-left: 0.75em;
+		padding-right: 0.75em;
+	}
+
+
+	.brand_h1{
+		padding-top: 0.25em;
+		padding-bottom: 0.25em;
+	}
+}
+
+
+@media all and (max-width : 460px) {
+	#mobile_nav_logo{display:none;}
+	#home_title{font-size:2em;}
+	.contact_h1{font-size: 2em;}
+}
+
+
+
 @media all and (max-width : 375px) {
 /* iPHX */
 
@@ -172,16 +205,4 @@
 
 
 
-}
-
-
-@media all and (max-width : 560px) {
-	#home_title{font-size:2.5em;}
-	.footer{padding:4% 3% 4% 3%;}
-}
-
-@media all and (max-width : 460px) {
-	#mobile_nav_logo{display:none;}
-	#home_title{font-size:2em;}
-	.contact_h1{font-size: 2em;}
 }
